# paircoder

./: .agentpackignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  align_repo_structure.py  apply_v2_release_fixes.py  paircoder-docs.md  setup_test_env.sh  test_planning.py  verify_tests.sh
tools/cli/: .coverage  CHANGELOG.md  README.md  RELEASE_READY.md  pyproject.toml  run_tests.py
tools/cli/.paircoder/: config.yaml
tools/cli/bpsai_pair/: __init__.py  cli.py  compaction.py  config.py  flow_loader.py  flows.py  hooks.py  migrate.py  ops.py  presets.py  session.py
tools/cli/bpsai_pair.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tools/cli/bpsai_pair/benchmarks/: runner.py
tools/cli/bpsai_pair/commands/: __init__.py  benchmark.py  cache.py  config.py  core.py  flow.py  metrics.py  orchestrate.py  preset.py  security.py  session.py  timer.py  upgrade.py
tools/cli/bpsai_pair/core/: __init__.py  bypass_log.py  config.py  constants.py  hooks.py  ops.py  preconditions.py  presets.py  task_state.py  utils.py
tools/cli/bpsai_pair/flows/: parser.py
tools/cli/bpsai_pair/github/: commands.py  pr.py
tools/cli/bpsai_pair/metrics/: __init__.py  estimation.py
tools/cli/bpsai_pair/orchestration/: __init__.py  autonomous.py  handoff.py  orchestrator.py
tools/cli/bpsai_pair/planning/: auto_assign.py  cli_commands.py  commands.py  models.py
tools/cli/bpsai_pair/release/: __init__.py  commands.py  template.py
tools/cli/bpsai_pair/security/: CONTAINMENT_IMAGE_README.md  Dockerfile  Dockerfile.containment  __init__.py  containment.py  dependencies.py  entrypoint-containment.sh  review.py  sandbox.py
tools/cli/bpsai_pair/skills/: __init__.py  cli_commands.py  exporter.py  gates.py  (+3 more)
tools/cli/docs/: conf.py  index.rst
tools/cli/tests/: conftest.py  conftest_mcp.py  test_autonomous_workflow.py  test_cli.py  test_config_v2.py  test_constants.py  test_contained_auto.py  test_context_sync.py  test_estimation.py  test_feature_branch_type.py  test_flow_cli.py  test_flows.py  test_hooks.py  test_mcp_server.py  test_mcp_tools.py  test_ops.py  test_pack_preview.py  test_presets.py  test_security_review.py  test_security_sandbox.py  test_session.py  test_skill_exporter.py  test_template.py  test_trello_fields.py  test_trello_sync.py  test_ttask_done_ac_verification.py  test_upgrade.py  test_webhook.py
(+312 files in other folders)
