
[project]
name = "bpsai-pair"
version = "0.1.0"
description = "CLI for AI pair-coding workflow"
authors = [{name = "BPS AI Software"}]
requires-python = ">=3.9"
dependencies = ["typer>=0.12", "rich>=13.7", "pyyaml>=6.0"]

[project.scripts]
bpsai-pair = "bpsai_pair.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
