[project]
readme = "README.md"
name = "bpsai-pair"
version = "2.9.1"
description = "CLI for AI pair-coding workflow"
requires-python = ">=3.12"
dependencies = [ "typer>=0.12", "rich>=13.7", "pyyaml>=6.0", "tiktoken>=0.5.0",]
[[project.authors]]
name = "BPS AI Software"

[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE"

[project.scripts]
bpsai-pair = "bpsai_pair.cli:run"
bpsai-pair-init = "bpsai_pair.init_bundled_cli:main"
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bpsai_pair = ["data/**/*"]

[project.optional-dependencies]
trello = [
    "py-trello>=0.19.0",
]
mcp = [
    "mcp>=1.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",  # For markdown support
    "sphinx-click>=5.0",  # For CLI documentation
]
sandbox = [
    "docker>=7.0.0",  # Docker SDK for Python
    "dockerpty>=0.4.1",  # PTY support for interactive Docker sessions
]
